# tauri-plugin-shadcn-menu

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
.github/workflows/: publish.yml
guest-js/: accelerator.ts  filter.ts  index.tsx  native.ts  types.ts  web.tsx
guest-js/components/: accelerator.tsx  context-menu.tsx  dropdown-menu.tsx  kbd.tsx  web-menu.tsx
guest-js/hooks/: use-accelerator.ts
guest-js/lib/: accelerator.ts  filter.ts  native.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: builder.rs  commands.rs  error.rs  lib.rs  symbol.rs  types.rs
